# Gibbon

./: LICENSE  manage.py  pyproject.toml  readme.md
gibbon/: manage.py
gibbon/accounting/: context_processors.py  models.py  urls.py  views.py
gibbon/accounting/migrations/: 0001_initial.py
gibbon/accounting/static/css/: style.css
gibbon/accounting/templates/accounting/: base.html  index.html
gibbon/accounting/templates/accounting/includes/: navbar.html
gibbon/gibbon/: asgi.py  settings.py  urls.py  wsgi.py
openview/: manage.py
openview/accounting/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
openview/accounting/templates/accounting/: base.html  create-entry.html  index.html
openview/accounting/templates/accounting/create_view/: create_account.html  create_company.html
openview/accounting/templates/accounting/includes/: navbar.html
openview/openview/: asgi.py  settings.py  urls.py  wsgi.py
puffin/: settings.py
puffin/accounting/: urls.py
puffin/accounting/templates/accounting/: base.html  index.html
puffin/puffin/: asgi.py  settings.py  urls.py  wsgi.py
