[project]
name = "puffin"
version = "0.1.0"
description = "Self-hosted Double-Entry Accounting Software"
authors = [
    {name = "johnzilla826",email = "229241950+johnzilla826@users.noreply.github.com"}
]
readme = "README.md"

[tool.poetry]
license = "MIT"

requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
